
    * Fix for Terminal widget in BSD/OSX

    * Fix for a Filler mouse_event() position bug

    * Fix support for mouse positions up to x=255, y=255

    * Fixes for a number of string encoding issues under Python 3

    * Fix for a LineBox border __init__() parameters

    * Disable curses_display external event loop support, screen resizing
      and gpm events are not properly supported


Urwid 1.0.0

    * New support for Python 3.2 from the same 2.x code base,
      requires distribute instead of setuptools (by Kirk McDonald,
      Wendell, Marien Zwart) everything except TwistedEventLoop and
      GLibEventLoop is supported

    * New experimental Terminal widget with xterm emulation and
      terminal.py example program (by aszlig)

    * Edit widget now supports a mask (for passwords), has a
      insert_text_result() method for full-field validation and
      normalizes input text to Unicode or bytes based on the caption
      type used

    * New TreeWidget, TreeNode, ParentNode, TreeWalker
      and TreeListBox classes for lazy expanding/collapsing tree
      views factored out of browse.py example program, with new
      treesample.py example program (by Rob Lanphier)

    * MainLoop now calls draw_screen() just before going idle, so extra
      calls to draw_screen() in user code may now be removed

    * New MainLoop.watch_pipe() method for subprocess or threaded
      communication with the process/thread updating the UI, and new
      subproc.py example demonstrating its use

    * New PopUpLauncher and PopUpTarget widgets and MainLoop option
      for creating pop-ups and drop-downs, and new pop_up.py example
      program

    * New twisted_serve_ssh.py example (by Ali Afshar) that serves
      multiple displays over ssh from the same application using
      Twisted and the TwistedEventLoop

    * ListBox now includes a get_cursor_coords() method, allowing
      nested ListBox widgets
